respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Account_Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Addresses</relationshipLabel>
        <relationshipName>Accounts_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_CR__c</fullName>
        <label>Address CR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Coordinates__c</fullName>
        <label>Address Coordinates</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CalleEspejo__c</fullName>
        <label>Calle espejo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_cat__c</fullName>
        <label>Calle</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostalEspejo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codigo Postal espejo</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Codigo Postal espejo)</relationshipLabel>
        <relationshipName>Accounts_AddressesmQ0H</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal_CP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codigo_Postal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Codigo Postal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Codigo_Postal)</relationshipLabel>
        <relationshipName>Accounts_Addresses5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ColoniaEspejo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Colonia espejo</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Colonia espejo)</relationshipLabel>
        <relationshipName>Accounts_AddressesmPgv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colonia_cp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Colonia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Colonia</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Colonia)</relationshipLabel>
        <relationshipName>Accounts_Addresses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colonia_espejo__c</fullName>
        <label>Colonia espejo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direcci_n__c</fullName>
        <formula>IF(  AND(CONTAINS(  Localidad_Cat2__c, &quot; &quot; ), CONTAINS(  Numero_Int_cat__c, &quot; &quot; )) 
,

Calle_cat__c  &amp; &quot;, &quot; &amp;  Numero_Ext_cp__c  &amp; &quot;-&quot; &amp;  Numero_Int_cat__c  &amp; &quot;, &quot; &amp;  Colonia_cp__r.Name &amp; &quot;, &quot; &amp; Codigo_Postal_CP__r.Name &amp; &quot;, &quot; &amp;   Municipio_Cat2__c  &amp; &quot;, &quot; &amp;   Estado_cat2__c  &amp; &quot;, &quot; &amp;  Pais_cat1__c 

,
 Calle_cat__c  &amp; &quot;, &quot; &amp;  Numero_Ext_cp__c  &amp; &quot;-&quot; &amp;  Numero_Int_cat__c  &amp; &quot;, &quot; &amp;  Colonia_cp__r.Name &amp; &quot;, &quot; &amp; Codigo_Postal_CP__r.Name &amp; &quot;, &quot; &amp;  Localidad_Cat2__c  &amp; &quot;, &quot; &amp;  Municipio_Cat2__c &amp; &quot;, &quot; &amp;  Estado_cat2__c &amp; &quot;, &quot; &amp;  Pais_cat1__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstadoEspejo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado espejo</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Estado espejo)</relationshipLabel>
        <relationshipName>Accounts_Addresses8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado_cat2__c</fullName>
        <formula>Codigo_Postal_CP__r.Clave_Relacion_SAT__r.Clave_SAT__c  &amp;&apos; &apos;&amp;   Codigo_Postal_CP__r.Clave_Relacion_SAT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Estado)</relationshipLabel>
        <relationshipName>Accounts_Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Folio_Origen_Destino2__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Folio Origen Destino</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Folio_Origen_Destino__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Folio Origen Destino</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LocalidadEspejo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localidad espejo</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Localidad espejo)</relationshipLabel>
        <relationshipName>Accounts_Addresses6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Localidad_Cat2__c</fullName>
        <formula>Codigo_Postal_CP__r.Localidad_Ref_CP__r.Clave_SAT__c   &amp; &apos; &apos;&amp;  Codigo_Postal_CP__r.Localidad_Ref_CP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Localidad CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad_Cp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Localidad</value>
            </filterItems>
            <filterItems>
                <field>Catalogo_SAT__c.Clave_Relacion_SAT__c</field>
                <operation>equals</operation>
                <valueField>$Source.Estado_cat__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Localidad)</relationshipLabel>
        <relationshipName>Accounts_Addresses4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motivo_rechazo__c</fullName>
        <description>razón por la cual contron room rechazo la ubicación</description>
        <label>Motivo de rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colonia incorrecta</fullName>
                </value>
                <value>
                    <fullName>Duplicada</fullName>
                </value>
                <value>
                    <fullName>Estado incorrecto</fullName>
                </value>
                <value>
                    <fullName>Nombre incorrecto</fullName>
                </value>
                <value>
                    <fullName>Zona completamente errónea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MunicipioEspejo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio espejo</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Municipio espejo)</relationshipLabel>
        <relationshipName>Accounts_Addresses7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipio_Cat2__c</fullName>
        <formula>Codigo_Postal_CP__r.Municipio_Ref_CP__r.Clave_SAT__c  &amp; &apos; &apos; &amp;   Codigo_Postal_CP__r.Municipio_Ref_CP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipio CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipio_Cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <filterItems>
                <field>Catalogo_SAT__c.Clave_Relacion_SAT__c</field>
                <operation>equals</operation>
                <valueField>$Source.Estado_cat__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Municipio)</relationshipLabel>
        <relationshipName>Accounts_Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Numero_Ext_cp__c</fullName>
        <label>Numero Ext</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Int_cat__c</fullName>
        <label>Numero Int</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaisEspejo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pais espejo</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses (Pais espejo)</relationshipLabel>
        <relationshipName>Accounts_Addresses9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pais_cat1__c</fullName>
        <formula>Codigo_Postal_CP__r.Pais_RefCP__r.Clave_SAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pais CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pais</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pais</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts Addresses</relationshipLabel>
        <relationshipName>Accounts_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referencia__c</fullName>
        <label>Referencia</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;Shipping Address&quot;</defaultValue>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                    <default>true</default>
                    <label>Shipping Address</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Veces_rechazado__c</fullName>
        <defaultValue>0</defaultValue>
        <description>cuantas veces fue rechazado por control room</description>
        <label>Veces rechazado</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Este campo registra los estatus en el proceso de validación de las coordenadas por el equipo de monitoreo en control room status_CR</description>
        <label>Status CR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>url_rc__c</fullName>
        <label>url CR</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Account Address</label>
    <listViews>
        <fullName>Copy_of_Master_Data_Pendientes</fullName>
        <columns>NAME</columns>
        <columns>Codigo_Postal_CP__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>status__c</columns>
        <columns>Active__c</columns>
        <columns>Address_Coordinates__Latitude__s</columns>
        <columns>Address_Coordinates__Longitude__s</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Rechazado</value>
        </filters>
        <label>Master Data Rechazados</label>
    </listViews>
    <listViews>
        <fullName>Direcciones_Internacionales</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pais_cat1__c</columns>
        <columns>status__c</columns>
        <columns>Active__c</columns>
        <columns>Address_Coordinates__Latitude__s</columns>
        <columns>Address_Coordinates__Longitude__s</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pais_cat1__c</field>
            <operation>notEqual</operation>
            <value>MEX</value>
        </filters>
        <label>Direcciones Internacionales</label>
    </listViews>
    <listViews>
        <fullName>Direcciones_Kimberly</fullName>
        <columns>NAME</columns>
        <columns>Codigo_Postal_CP__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>status__c</columns>
        <columns>Active__c</columns>
        <columns>Address_Coordinates__Latitude__s</columns>
        <columns>Address_Coordinates__Longitude__s</columns>
        <columns>Address__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Kimberly</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/1/2025 12:00 AM</value>
        </filters>
        <label>Direcciones Kimberly</label>
    </listViews>
    <listViews>
        <fullName>Master_Data_Pendientes</fullName>
        <columns>NAME</columns>
        <columns>Codigo_Postal_CP__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>status__c</columns>
        <columns>Active__c</columns>
        <columns>Address_Coordinates__Latitude__s</columns>
        <columns>Address_Coordinates__Longitude__s</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Pendiente</value>
        </filters>
        <label>Master Data Pendientes</label>
    </listViews>
    <listViews>
        <fullName>Master_Data_Validadas</fullName>
        <columns>NAME</columns>
        <columns>Codigo_Postal_CP__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>status__c</columns>
        <columns>Active__c</columns>
        <columns>Address_Coordinates__Latitude__s</columns>
        <columns>Address_Coordinates__Longitude__s</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Validado</value>
        </filters>
        <label>Master Data Validadas</label>
    </listViews>
    <nameField>
        <label>Account Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Capturar_geolocalizacion</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Address_Coordinates__c)</errorConditionFormula>
        <errorMessage>Por seguridad, favor de ingresar al perfil del cliente y modificar la dirección en el apartado de Account Addresses (pestaña Related)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validacion</fullName>
        <active>false</active>
        <description>Una vez que control room valida la dirección esta no puede cambiar</description>
        <errorConditionFormula>ISPICKVAL(status__c, &quot;Validado&quot;)</errorConditionFormula>
        <errorMessage>Cuenta validada, no puede modificar la dirección</errorMessage>
    </validationRules>
</CustomObject>